@startuml 02_interview_session_lifecycle
title Жизненный цикл интервью-сессии

hide empty description
skinparam state {
  BackgroundColor White
  BorderColor #333333
}

[*] --> Active : создать сессию()

state "Активна" as Active

Active --> Active : добавить сообщение()\nследующий вопрос / уточнение
Active --> Complete : завершить сессию()\nветка завершения
Active --> Canceled : отменить сессию()

state "Завершена" as Complete

state "Отменена" as Canceled

Complete --> Complete : повторное завершение()\nбез изменений
Canceled --> Canceled : повторная отмена()\nбез изменений

Complete --> [*]
Canceled --> [*]

@enduml
